force-app/main/default/objects/Contact/fields/Passenger_Type__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Type__c</fullName>
    <label>Passenger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adult</fullName>
                <default>true</default>
                <label>Adult</label>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>