force-app/main/default/objects/Contact/validationRules/Infant_Must_Have_Birthdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Infant_Must_Have_Birthdate</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Passenger_Type__c , &quot;Infant&quot;), 
ISBLANK( Birthdate ) 
)</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Birthdate is required for passengers classified as Infant.</errorMessage>
</ValidationRule>